Updated versions of python notebook to process OCR results. New version of R script to select minutes with SEPs. Updated versions of data archives.

--- a/python/Process_ocr_results.ipynb
+++ b/python/Process_ocr_results.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
     "        y_list.append(v.y)\n",
     "    f = {}\n",
     "    f[\"para_id\"] = para_id\n",
-    "    f[\"page\"] = para_id[8:11]\n",
+    "    f[\"page\"] = para_id[9:12]\n",
     "    f[\"text\"] = text\n",
     "    f[\"avg_word_height\"] = pcheight*1000\n",
     "    f[\"width\"] = max(x_list) - min(x_list)\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
     "    last_page  = int(m.group(3))\n",
     "    \n",
     "    # Read json source \n",
-    "    data = json.loads(open('data/data-gen/' + filename).read())\n",
+    "    data = json.loads(open('../data/data-gen/json/' + filename).read())\n",
     "    \n",
     "    # Convert json to string\n",
     "    json_blob = json.dumps(data)\n",
@@ -182,12 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read list of files to process\n",
-    "mypath = 'data/data-gen/json'\n",
+    "mypath = '../data/data-gen/json'\n",
     "f = []\n",
     "for (dirpath, dirnames, filenames) in os.walk(mypath):\n",
     "    f.extend(filenames)\n",
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,23 +213,21 @@
     "# Convert to pandas df\n",
     "colnames = ['id','page','text','chars','avg_word_height','width','height','area','char_size','pos_x','pos_y','aspect','layout']\n",
     "big_df = pd.read_csv(io.StringIO(csv_txt), names=colnames)\n",
-    "\n",
-    "# Save big data frame as pickle\n",
-    "big_df.to_pickle('data/data-gen/big_df.p')"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(43790, 13)"
+       "(40703, 13)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,6 +235,188 @@
    "source": [
     "big_df.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>page</th>\n",
+       "      <th>text</th>\n",
+       "      <th>chars</th>\n",
+       "      <th>avg_word_height</th>\n",
+       "      <th>width</th>\n",
+       "      <th>height</th>\n",
+       "      <th>area</th>\n",
+       "      <th>char_size</th>\n",
+       "      <th>pos_x</th>\n",
+       "      <th>pos_y</th>\n",
+       "      <th>aspect</th>\n",
+       "      <th>layout</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>40698</th>\n",
+       "      <td>20200916-027-002</td>\n",
+       "      <td>27</td>\n",
+       "      <td>Forecast Uncertainty The economic projections ...</td>\n",
+       "      <td>90</td>\n",
+       "      <td>16.873282</td>\n",
+       "      <td>0.632353</td>\n",
+       "      <td>0.049242</td>\n",
+       "      <td>0.031139</td>\n",
+       "      <td>0.000346</td>\n",
+       "      <td>0.427288</td>\n",
+       "      <td>0.130682</td>\n",
+       "      <td>12.841630</td>\n",
+       "      <td>h</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40699</th>\n",
+       "      <td>20200916-027-003</td>\n",
+       "      <td>27</td>\n",
+       "      <td>may\\r\\n</td>\n",
+       "      <td>5</td>\n",
+       "      <td>12.626275</td>\n",
+       "      <td>0.029412</td>\n",
+       "      <td>0.012626</td>\n",
+       "      <td>0.000371</td>\n",
+       "      <td>0.000074</td>\n",
+       "      <td>0.764706</td>\n",
+       "      <td>0.147727</td>\n",
+       "      <td>2.329412</td>\n",
+       "      <td>h</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40700</th>\n",
+       "      <td>20200916-027-004</td>\n",
+       "      <td>27</td>\n",
+       "      <td>differ from those members of the Board of Gove...</td>\n",
+       "      <td>1673</td>\n",
+       "      <td>16.644515</td>\n",
+       "      <td>0.833333</td>\n",
+       "      <td>0.305556</td>\n",
+       "      <td>0.254630</td>\n",
+       "      <td>0.000152</td>\n",
+       "      <td>0.498366</td>\n",
+       "      <td>0.290404</td>\n",
+       "      <td>2.727273</td>\n",
+       "      <td>h</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40701</th>\n",
+       "      <td>20200916-027-005</td>\n",
+       "      <td>27</td>\n",
+       "      <td>outlook for the future path of the federal fun...</td>\n",
+       "      <td>2559</td>\n",
+       "      <td>16.688869</td>\n",
+       "      <td>0.834967</td>\n",
+       "      <td>0.443182</td>\n",
+       "      <td>0.370042</td>\n",
+       "      <td>0.000145</td>\n",
+       "      <td>0.499183</td>\n",
+       "      <td>0.648359</td>\n",
+       "      <td>1.884029</td>\n",
+       "      <td>h</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40702</th>\n",
+       "      <td>20200916-027-006</td>\n",
+       "      <td>27</td>\n",
+       "      <td>economy.\\r\\n</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12.626290</td>\n",
+       "      <td>0.071895</td>\n",
+       "      <td>0.012626</td>\n",
+       "      <td>0.000908</td>\n",
+       "      <td>0.000091</td>\n",
+       "      <td>0.549020</td>\n",
+       "      <td>0.863636</td>\n",
+       "      <td>5.694105</td>\n",
+       "      <td>h</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     id  page  \\\n",
+       "40698  20200916-027-002    27   \n",
+       "40699  20200916-027-003    27   \n",
+       "40700  20200916-027-004    27   \n",
+       "40701  20200916-027-005    27   \n",
+       "40702  20200916-027-006    27   \n",
+       "\n",
+       "                                                    text  chars  \\\n",
+       "40698  Forecast Uncertainty The economic projections ...     90   \n",
+       "40699                                            may\\r\\n      5   \n",
+       "40700  differ from those members of the Board of Gove...   1673   \n",
+       "40701  outlook for the future path of the federal fun...   2559   \n",
+       "40702                                       economy.\\r\\n     10   \n",
+       "\n",
+       "       avg_word_height     width    height      area  char_size     pos_x  \\\n",
+       "40698        16.873282  0.632353  0.049242  0.031139   0.000346  0.427288   \n",
+       "40699        12.626275  0.029412  0.012626  0.000371   0.000074  0.764706   \n",
+       "40700        16.644515  0.833333  0.305556  0.254630   0.000152  0.498366   \n",
+       "40701        16.688869  0.834967  0.443182  0.370042   0.000145  0.499183   \n",
+       "40702        12.626290  0.071895  0.012626  0.000908   0.000091  0.549020   \n",
+       "\n",
+       "          pos_y     aspect layout  \n",
+       "40698  0.130682  12.841630      h  \n",
+       "40699  0.147727   2.329412      h  \n",
+       "40700  0.290404   2.727273      h  \n",
+       "40701  0.648359   1.884029      h  \n",
+       "40702  0.863636   5.694105      h  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "big_df.tail(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save big data frame as pickle\n",
+    "big_df.to_pickle('../data/data-gen/big_df.p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
